--- a/.github/workflows/signature.yml
+++ b/.github/workflows/signature.yml
@@ -214,11 +214,19 @@ jobs:
                     await fs.writeFile(artifactPath, artifactContent);
                     return artifactPath;
             - name: Upload backup artifact
-              # TODO: Upload the artifact to S3 archive
               uses: actions/upload-artifact@v4
               with:
                 name: ${{ steps.generate-backup-artifact.outputs.result }}
                 path: ${{ steps.generate-backup-artifact.outputs.result }}
+            - name: Upload backup artifact to S3
+              uses: ./.github/actions/upload_signature_backup
+              env:
+                AWS_ACCESS_KEY_ID: ${{ secrets.CLA_ACCESS_KEY_ID }}
+                AWS_SECRET_ACCESS_KEY: ${{ secrets.CLA_SECRET_ACCESS_KEY }}
+              with:
+                signature-artifact-path: ${{ steps.generate-backup-artifact.outputs.result }}
+                signature-backup-bucket-name: s3-clasignaturesbackupbucket-vubykptecpua
+                signature-backup-bucket-region: us-east-2
             - name: Handle automation failure
               uses: actions/github-script@v7
               if: ${{ failure() && (steps.verify-credentials.outcome == 'failure' || steps.handle-already-a-cla-signatory.outcome == 'failure' || steps.add-to-cla-signatories.outcome == 'failure' || steps.notify-of-successful-signature.outcome == 'failure') }}
